# Encrypto

./: .gitignore  Cargo.toml
src/: main.rs
