[package]
name = "Encrypto"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Fragmenta", "Nicolas Renan Machado Dias"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12" }
fuser = { version = "0.14" }
libc = { version = "0.2" }
clap = "4.5.1"
env_logger = "0.11.2"
sqlx = { version = "0.7", features = ["runtime-async-std", "sqlite", "sqlx-sqlite", "chrono"] }
nix = { version = "0.27", features = ["user"] }
byteorder = { version = "1.5" }